--- a/nfs-pvc-example.yaml
+++ b/nfs-pvc-example.yaml
@@ -1,11 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: my-pvc-demo
+  name: my-nfs-pvc
 spec:
   storageClassName: managed-nfs-storage
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi  # 申请的资源大小
